--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+	 <h2>Things to Buy with My Salary</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Headphones</li>
+    </ol>
+
+    <h2>Holiday Destinations</h2>
+    <ul>
+        <li data-ns-test="holidayList">Japan</li>
+        <li data-ns-test="holidayList">New Zealand</li>
+        <li data-ns-test="holidayList">Switzerland</li>
+    </ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
